Bug 396564 - Discover crahses when clicking on an application in the search results list
Summary: Discover crahses when clicking on an application in the search results list
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.13.2
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
: 396589 397348 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-07-16 10:31 UTC by Thomas Pfeiffer
Modified: 2018-08-15 12:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Pfeiffer 2018-07-16 10:31:43 UTC
Application: plasma-discover (5.13.2)

Qt Version: 5.11.0
Frameworks Version: 5.47.0
Operating System: Linux 4.13.0-45-generic x86_64
Distribution: KDE neon User Edition 5.13

-- Information about the crash:
I had searched for "Qt Creator" and when I clicked on Qt Creator in the result list, Discover crashed.
When I retried, it did not crash.

The crash does not seem to be reproducible.

-- Backtrace:
Application: Discover (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f2ee4e6d8c0 (LWP 27888))]

Thread 11 (Thread 0x7f2e949e7700 (LWP 28348)):
#0  __libc_disable_asynccancel () at ../sysdeps/unix/sysv/linux/x86_64/cancellation.S:98
#1  0x00007f2ee0136759 in poll () at ../sysdeps/unix/syscall-template.S:84
#2  0x00007f2edad7a38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2e800008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2e949e6cf0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#6  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#7  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x71712f0) at thread/qthread_unix.cpp:367
#8  0x00007f2edcbe06ba in start_thread (arg=0x7f2e949e7700) at pthread_create.c:333
#9  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 10 (Thread 0x7f2e95218700 (LWP 28347)):
#0  0x00007f2ee013227d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edadbd6f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad79e74 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2edad7a330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2e7c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2e95217cf0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#7  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#8  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x16508b0) at thread/qthread_unix.cpp:367
#9  0x00007f2edcbe06ba in start_thread (arg=0x7f2e95218700) at pthread_create.c:333
#10 0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7f2e95c45700 (LWP 27901)):
#0  0x00007f2ee013674d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edad7a38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2e880008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2e95c44cf0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x17318c0) at thread/qthread_unix.cpp:367
#7  0x00007f2edcbe06ba in start_thread (arg=0x7f2e95c45700) at pthread_create.c:333
#8  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7f2e96ce6700 (LWP 27899)):
#0  0x00007f2edad79c6e in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f2edad7a330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad7a712 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2eaef789d6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f2edada0bb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f2edcbe06ba in start_thread (arg=0x7f2e96ce6700) at pthread_create.c:333
#6  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f2e974e7700 (LWP 27898)):
#0  0x00007f2ee013227d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edadbd6f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad79e74 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2edad7a330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f2edad7a4d9 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007f2edada0bb5 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#7  0x00007f2edcbe06ba in start_thread (arg=0x7f2e974e7700) at pthread_create.c:333
#8  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f2ea7fff700 (LWP 27894)):
#0  0x00007f2ee013674d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edad7a38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2ea00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2ea7ffecf0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x190a590) at thread/qthread_unix.cpp:367
#7  0x00007f2edcbe06ba in start_thread (arg=0x7f2ea7fff700) at pthread_create.c:333
#8  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f2eadaea700 (LWP 27893)):
#0  0x00007f2ee013674d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edad7a38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2ea80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2eadae9cf0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x18fa890) at thread/qthread_unix.cpp:367
#7  0x00007f2edcbe06ba in start_thread (arg=0x7f2eadaea700) at pthread_create.c:333
#8  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f2eb80d5700 (LWP 27892)):
#0  0x00007f2ee013227d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edadbd6f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad79e74 in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2edad7a330 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2eb00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2eb80d4c80, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#7  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#8  0x00007f2ee3f7be66 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Quick.so.5
#9  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x18708e0) at thread/qthread_unix.cpp:367
#10 0x00007f2edcbe06ba in start_thread (arg=0x7f2eb80d5700) at pthread_create.c:333
#11 0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f2ec88db700 (LWP 27891)):
#0  0x00007f2ee013674d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edad7a38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2ebc0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2ec88dacd0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f2ee16bbcf5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#7  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x12ac4e0) at thread/qthread_unix.cpp:367
#8  0x00007f2edcbe06ba in start_thread (arg=0x7f2ec88db700) at pthread_create.c:333
#9  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f2ec90dc700 (LWP 27890)):
#0  0x00007f2ee013674d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f2edad7a38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f2ee0d56beb in QEventDispatcherGlib::processEvents (this=0x7f2ec40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7f2ec90dbcc0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#5  0x00007f2ee0b335e4 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007f2ee2a73f35 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f2ee0b3e727 in QThreadPrivate::start (arg=0x7f2ee2cecd60) at thread/qthread_unix.cpp:367
#8  0x00007f2edcbe06ba in start_thread (arg=0x7f2ec90dc700) at pthread_create.c:333
#9  0x00007f2ee014241d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f2ee4e6d8c0 (LWP 27888)):
[KCrash Handler]
#6  0x00007f2ee3c1f87b in OdrsReviewsBackend::parseReviews (this=this@entry=0x19702b0, document=..., resource=resource@entry=0x0) at /workspace/build/libdiscover/appstream/OdrsReviewsBackend.cpp:339
#7  0x00007f2ee3c23610 in OdrsReviewsBackend::reviewsFetched (this=0x19702b0) at /workspace/build/libdiscover/appstream/OdrsReviewsBackend.cpp:188
#8  0x00007f2ee0d2ceb6 in QtPrivate::QSlotObjectBase::call (a=0x7ffc26066830, r=0x19702b0, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:376
#9  QMetaObject::activate (sender=sender@entry=0x6c7f330, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3754
#10 0x00007f2ee0d2d497 in QMetaObject::activate (sender=sender@entry=0x6c7f330, m=m@entry=0x7f2ede309ac0 <QNetworkReply::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3633
#11 0x00007f2ede0b0fa3 in QNetworkReply::finished (this=this@entry=0x6c7f330) at .moc/moc_qnetworkreply.cpp:380
#12 0x00007f2ede019b37 in QNetworkReplyHttpImplPrivate::finished (this=0x6c7f590) at access/qnetworkreplyhttpimpl.cpp:2237
#13 0x00007f2ede019d25 in QNetworkReplyHttpImplPrivate::replyFinished (this=<optimized out>) at access/qnetworkreplyhttpimpl.cpp:1118
#14 0x00007f2ede0b5789 in QNetworkReplyHttpImpl::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at .moc/moc_qnetworkreplyhttpimpl_p.cpp:260
#15 0x00007f2ee0d2dbc9 in QObject::event (this=0x6c7f330, e=<optimized out>) at kernel/qobject.cpp:1251
#16 0x00007f2ee235529c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x6c7f330, e=0x7f2e7c005340) at kernel/qapplication.cpp:3713
#17 0x00007f2ee235c917 in QApplication::notify (this=0x7ffc26066fc0, receiver=0x6c7f330, e=0x7f2e7c005340) at kernel/qapplication.cpp:3472
#18 0x00007f2ee0cffe38 in QCoreApplication::notifyInternal2 (receiver=0x6c7f330, event=event@entry=0x7f2e7c005340) at kernel/qcoreapplication.cpp:1048
#19 0x00007f2ee0d02a3e in QCoreApplication::sendEvent (event=0x7f2e7c005340, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#20 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x121b9f0) at kernel/qcoreapplication.cpp:1745
#21 0x00007f2ee0d02eb8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1599
#22 0x00007f2ee0d575c3 in postEventSourceDispatch (s=0x126fd90) at kernel/qeventdispatcher_glib.cpp:276
#23 0x00007f2edad7a197 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#24 0x00007f2edad7a3f0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x00007f2edad7a49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f2ee0d56bcf in QEventDispatcherGlib::processEvents (this=this@entry=0x126e710, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#27 0x00007f2ed49e4c11 in QPAEventDispatcherGlib::processEvents (this=0x126e710, flags=...) at qeventdispatcher_glib.cpp:69
#28 0x00007f2ee0cfe1ca in QEventLoop::exec (this=this@entry=0x7ffc26066ee0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:214
#29 0x00007f2ee0d072d4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1336
#30 0x00007f2ee1b4681c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1751
#31 0x00007f2ee23551f5 in QApplication::exec () at kernel/qapplication.cpp:2898
#32 0x00000000004130df in main (argc=1, argv=<optimized out>) at /workspace/build/discover/main.cpp:156

The reporter indicates this bug may be a duplicate of or related to bug 385212.

Possible duplicates by query: bug 391675, bug 385212.

Reported using DrKonqi
Comment 1 Aleix Pol 2018-07-19 16:37:46 UTC
*** Bug 396589 has been marked as a duplicate of this bug. ***
Comment 2 Aleix Pol 2018-07-20 12:21:17 UTC
Git commit ec234e949f5c4b1a41ac926c8e3128cb4a463324 by Aleix Pol.
Committed on 20/07/2018 at 12:19.
Pushed by apol into branch 'Plasma/5.12'.

Prevent crash

Wasn't able to reproduce but this seems to be the case.

M  +4    -0    libdiscover/appstream/OdrsReviewsBackend.cpp

https://commits.kde.org/discover/ec234e949f5c4b1a41ac926c8e3128cb4a463324
Comment 3 Omar 2018-08-15 12:42:59 UTC
*** Bug 397348 has been marked as a duplicate of this bug. ***