Prevent crash

Wasn't able to reproduce but this seems to be the case.

BUG: 396564